Added play word option

--- a/source/eWordLearner/build.properties
+++ b/source/eWordLearner/build.properties
@@ -3,4 +3,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               icons/
+               icons/,\
+               lib/jl1.0.jar
+jars.extra.classpath = lib/jl1.0.jar
